# Photoshop-Clone-Fedora-Linux

./: CMakeLists.txt  CMakePresets.json  ImageManipulator.cpp  ImageManipulator.h  README.md  filepath.txt  gui.cpp  imgui.ini  renderLog.txt
Dependancies/ImGui/Source/: imgui_demo.cpp
Dependancies/glad/include/glad/: glad.h
Dependancies/glad/src/: glad.c
